--- a/ts/src/index.html
+++ b/ts/src/index.html
@@ -1,13 +1,147 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="pt-br">
+
 <head>
-  <meta charset="utf-8">
-  <title>Ts</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Meu Site</title>
+    <!-- Importar o arquivo CSS -->
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-  <app-root></app-root>
+    <!DOCTYPE html>
+    <html lang="pt-br">
+
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Meu Site</title>
+    </head>
+
+    <body>
+
+        <!-- Menu -->
+        <nav>
+            <h1>SLACA 2019</h1>
+            <span>
+                <img src="assets/slacalogo.png" alt="Imagem do Usuário">
+                <div>13 SLACA</div>
+            </span>
+            <ul>
+                <li><a href="#apresentacao">Apresentação</a></li>
+                <li><a href="#comites">Comitês</a></li>
+                <li><a href="#autores">Autores</a></li>
+                <li><a href="#eixos">Eixos Temáticos</a></li>
+                <li><a href="#trabalhos">Trabalhos</a></li>
+                <li><a href="#contatos">Contatos</a></li>
+            </ul>
+        </nav>
+
+
+
+        <header>
+            <div class="header-content">
+                <div class="left-content">
+                    <h2>Anais do Simpósio Latino Americano de Ciências de Alimentos</h2>
+                    <h1>Anais do 13º Simpósio Latino Americano de Ciência de Alimentos</h1>
+                    <span>ISSN 1234-5678</span>
+                </div>
+                <select>
+                    <option value="pt-br">PT.BR</option>
+                    <!-- Outras opções de idioma aqui -->
+                </select>
+                <div class="right-content">
+                    <div>Bem vindo!</div>
+                    <div class="user-email">alguem12@galaascience.com</div>
+
+                </div>
+                <img src="assets/avatar.png" alt="Imagem do Usuário">
+            </div>
+        </header>
+
+
+        <section id="hero">
+            <div>
+                <h1>Análise sensorial de preparações funcionais desenvolvidas para escolares entre 09 e 15 anos, do
+                    município de Campinas/SP</h1>
+            </div>
+            <iframe width="640" height="400" src="https://www.youtube.com/embed/LSW53h2iPdw" frameborder="0"
+                allowfullscreen></iframe>
+
+            <aside id="detalhes">
+                <h3>Detalhes</h3>
+                <div>
+                    <span> Tipo de apresentação: Pôster</span>
+                    <span>Eixo temático : Alimentação e saúde(AS)</span>
+                    <span>Palavras-Chaves : Alimentos funcionais, alimentação escolar.</span>
+
+                    <div>
+                        <h3>Autores:</h3>
+                        <div>Galileu Galilei</div>
+                        <div>Berta Lange de Marretes</div>
+                        <div>Isaack Newton</div>
+                        <div>Cesar Lattes</div>
+                        <div>Stephen Hawking</div>
+                    </div>
+                </div>
+
+                <div class="college">
+                    <div >Universade estadual de Campinas</div>
+                    <div>Universade de São paulo</div>
+                    <div>Universade nacional de pesquisas espaciais</div>
+                    <div>Universade federal do Rio de janeiro</div>
+                </div>
+               
+            </aside>
+        </section>
+
+
+
+
+        </div>
+        <div id="resumo">
+            <h2>Resumo</h2>
+            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur architecto voluptatum recusandae.
+                Quo porro quas doloremque id alias nobis eaque tempore deleniti? Aperiam sapiente voluptatum debitis aut
+                labore aliquam similique!</span>
+
+
+            <!-- Discussões -->
+            <section id="discussoes">
+                <h2>Discussões</h2>
+                <h3>Compartilhe suas idéias ou dúvidas com os autores!</h3>
+                <span>Sabia que o maior estímulo no desenvolvimento ciêntifico e cultural é a curiosidade? Deixe seus
+                    questionamentos e dúvidas para o autor!</span>
+
+
+                <button>Criar tópico</button>
+
+                <div>
+                    <h2>Assuntos da pergunta aparece aqui</h2>
+                    <h3>Carlos Henquite Santos</h3>
+                    <span>Comecinho da pergunta aparece aqui, resente relato, inscreva-se no campo da análise e impacto
+                        de processos formativo situado, impacto de processos formativo processo...</span>
+                </div>
+                <div>
+                    <h2>Assuntos da pergunta aparece aqui</h2>
+                    <h3>Carlos Henquite Santos</h3>
+                    <span>Comecinho da pergunta aparece aqui, resente relato, inscreva-se no campo da análise e impacto
+                        de processos formativo situado, impacto de processos formativo processo...</span>
+                </div>
+            </section>
+
+            <div class="footer">
+                <h3>Preservar a memória do evento e ampliar o acesso ao conhecimento cientifico gerado em eventos é a
+                    razão de ser da plataforma Galoá Proceedings.</h3>
+                <span>Os trabalhos publicados aqui tem maior alcance e ficam disponíveis para toda comunidade cientifica
+                    , mantendo o debate o acesso científico, formetado pelos encontros e aumentando o impacto do
+                    evento.</span>
+            </div>
+    </body>
+
+    </html>
+
 </body>
+
 </html>
